syntax = "proto3";

package com.voteva.users.grpc.service.v1;

import "common/model/CommonModels.proto";
import "users/v1/model/UsersModels.proto";

option java_multiple_files = true;


service UsersServiceV1 {

  rpc getUserInfoByUid (com.voteva.users.grpc.model.v1.GUserUidRequest) returns (com.voteva.users.grpc.model.v1.GUserInfoResponse);

  rpc getUserInfoByEmail (com.voteva.users.grpc.model.v1.GUserEmailRequest) returns (com.voteva.users.grpc.model.v1.GUserInfoResponse);

  rpc addUser (com.voteva.users.grpc.model.v1.GAddUserRequest) returns (com.voteva.users.grpc.model.v1.GUserInfoResponse);

  rpc updateUser (com.voteva.users.grpc.model.v1.GUpdateUserRequest) returns (com.voteva.users.grpc.model.v1.GUserInfoResponse);

}